add old implementation for eviction algorithm tests and to cut the dependency to the implementation classes of cache2k