@@ -22,79 +22,18 @@ package org.cache2k.benchmark.jmh;
  * #L%
  */
 
-import org.cache2k.benchmark.Cache2kFactory;
-import org.cache2k.benchmark.Cache2kNoEvictionFactory;
-import org.cache2k.benchmark.ChmNoEvictionFactory;
-import org.openjdk.jmh.profile.*;
-import org.openjdk.jmh.runner.Runner;
-import org.openjdk.jmh.runner.options.Options;
-import org.openjdk.jmh.runner.options.OptionsBuilder;
-import org.openjdk.jmh.runner.options.TimeValue;
-
-import java.util.concurrent.TimeUnit;
-
 /**
- * Run the test suite with predefined parameters.
+ * Configured main class, delegates to runner variant class.
+ *
+ * @author Jens Wilke
  */
 public class Main {
 
   public static void main(String[] args) throws Exception {
-    Main m = new Main();
-    m.parseArgs(args);
-    m.runTests();
-  }
-
-  static void quickOptions(OptionsBuilder ob) {
-    ob.measurementTime(new TimeValue(1000, TimeUnit.MICROSECONDS)).forks(2).warmupIterations(1).measurementIterations(2);
-  }
-
-  static void dilligentOptions(OptionsBuilder ob) {
-    ob.measurementTime(new TimeValue(10, TimeUnit.SECONDS)).forks(3).warmupIterations(5).measurementIterations(3);
-  }
-
-  static void addPerfAsm(OptionsBuilder ob) {
-    ob.addProfiler(LinuxPerfAsmProfiler.class);
-    ob.measurementIterations(5);
-    ob.forks(1);
-  }
-
-  boolean quick = false;
-  boolean perf = false;
-  Class<?>[] benchmarksWithoutEviction =
-          new Class<?>[]{Cache2kFactory.class, Cache2kNoEvictionFactory.class, ChmNoEvictionFactory.class};
-
-  public void parseArgs(String[] args) {
-    for (String arg : args) {
-      if ("--quick".equals(arg)) {
-        quick = true;
-      }
-      if ("--perf".equals(arg)) {
-        perf = true;
-      }
-    }
-  }
-
-  public void runTests() throws Exception {
-    for (Class<?> c : benchmarksWithoutEviction) {
-      OptionsBuilder ob = new OptionsBuilder();
-      if (quick) {
-        quickOptions(ob);
-      } else {
-        dilligentOptions(ob);
-      }
-      ob.timeUnit(TimeUnit.MILLISECONDS);
-      ob.addProfiler(CompilerProfiler.class); // compiler statistics
-      ob.addProfiler(HotspotRuntimeProfiler.class); // locks and monitors
-      ob.addProfiler(GCProfiler.class); // garbage collection
-      ob.jvmArgs("-server", "-Xmx2G",  "-XX:+UseG1GC",  "-XX:-UseBiasedLocking");
-      if (perf) {
-        addPerfAsm(ob);
-      }
-      Options opt = ob
-              .param("cacheFactory", c.getCanonicalName())
-              .build();
-      new Runner(opt).run();
-    }
+    Class c = Class.forName(Main.class.getPackage().getName() + "." + args[0]);
+    Common r = (Common) c.getConstructor().newInstance();
+    r.setArguments(args);
+    r.run();
   }
 
 }
